fixed hamburger flickering scrollbar

--- a/intro-section/style.css
+++ b/intro-section/style.css
@@ -33,22 +33,22 @@ img {
   list-style: none;
   padding: 0;
   margin: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   background-color: #fff;
-  height: 100vh;
   width: 65%;
   opacity: 0;
-  transform: scale(0); 
+  height: 100vh;
+  transform: scale(0);
   transform-origin: top right;
   transition: all .5s; 
   z-index: 10;
 }
 
 .navigation.active {
-  transform: scale(1);
   opacity: 1;
+  transform: scale(1);
 }
 
 
@@ -83,6 +83,7 @@ main {
   opacity: 0;
   transition: all 0.5s;
   visibility: hidden;
+  overflow: hidden;
 }
 .darkenPage.active {
   opacity: 1;
@@ -113,10 +114,12 @@ main {
 
 .clients {
   display: flex;
+  justify-content: center;
 }
 
 .clients > * {
   transform: scale(0.75);
+  overflow: visible;
 }
 
 
@@ -244,3 +247,11 @@ span {
 }
 
 /* END OF HAMBURGER STYLING */
+
+/* fix the annoying bug where hamburger menu triggers freaking scrollbar to show up hecking heck omg that was painful */
+/* just show the damned scrollbar by default in order to stop the flickering scrollbar*/
+@media screen and (min-width: 376px) {
+  body {
+    overflow-y: scroll;
+  }
+}
